--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,11 @@ java {
 repositories {
 	mavenCentral()
 }
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	//web 라이브러리 추가
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
 
 	//lombok 라이브러리 추가 시작
 	implementation 'org.projectlombok:lombok'
